--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				background-position: center;
 			}
 			h1,h2,h3,h4{
-				color: white;
+				color: black;
 			}
 		</style>
 
@@ -22,13 +22,8 @@
 		<h1 style="text-align: center; font-size: 70px;">Guess Number Game <img src="img/SmileFace.png" alt="Trulli" width="70" height="70"></h1>
 		<h2 style="text-align: right; margin-right: 100px;margin-top:-50px">By Lily Lee</h2>
 		<hr>
-		<h3 style="text-align: center; font-size: 40px;">please enter number </h3>
-		<h4 style="text-align: center; font-size: 40px">0 to 100</h4>
-		
-		<label for="fname">Number:</label>
-		<input type="number" id="fname" name="fname" value=""min="0" max="100">
-		<input type="submit" value="submit">
-		<input type="submit" value="restart">
+		<h3 style="text-align: center; font-size: 40px;">Click Run to play the game!</h3>
+		<iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@LEECHUN1/Guess-Number-C?lite=true&outputonly=1"></iframe>
 
 	</body>
 </html>
